# Verily-GSAF

./: .gitignore  Makefile  README.md  pyproject.toml  run_all_tests.sh  run_tests.py  test_cli_flow.py  test_license_server.py
docs/: ARCHITECTURE.md  CERTIFICATION_GAP.md  COMPETITIVE_MATRIX.md  GTM.md  IP_LICENSE_TEMPLATE.md  MARKETING_SITE.md  NDA_TEMPLATE.md  PPA_ESTIMATE.md  SALES_DECK.md  SOC_INTEGRATION.md  VERIFICATION.md  VERIFICATION_PLAN.md  WHITEPAPER_CERTIFICATION.md  WHITEPAPER_EAVA.md  WHITEPAPER_PQC.md  cli.md  engine-sdk.md  evidence.md  fpga-guide.md  getting-started.md  index.md  mkdocs.yml  openapi.yaml
evidence-pack/: PACK_MANIFEST.md
formal/: bitwuzla_cli.py  engine_wrappers_formal.sv  gf_engine_if_formal.sv  gf_fabric_formal_full.sv  gf_fabric_formal_yosys.sv  gf_mont_mult_formal.sv  gf_montgomery_cluster_formal.sv  gf_secure_fabric_formal_yosys.sv  gf_secure_fabric_top_formal.sv  sby_ecc_const.sby  sby_fabric.sby  sby_fifo.sby  sby_modexp_const.sby  sby_modinv_const.sby  sby_pqc_const.sby  sby_rsa_crt_const.sby
fpga/: synth-vivado.tcl
fv/: gf_fabric_props.sv  gf_secure_fabric_formal.sv
gsaf_cli/: __init__.py  __main__.py  architect.py  assure.py  explore.py  fpga.py  license.py  license_crypto.py  license_models.py  license_server.py  validate_engine.py  verify.py
model/: ecc_model.py  gen_vectors.py  golden_model.py  pqc_ntt_model.py  rsa_crt_model.py
rtl/: gf_axil_frontend.sv  gf_completion_queue.sv  gf_ecc_engine.sv  gf_ecc_engine_wrapper.sv  gf_engine_if.sv  gf_engine_template.sv  gf_microcode_rom.sv  gf_modexp_engine.sv  gf_pkg.sv  (+13 more)
(+55 files in other folders)
